# blacknet

./: .gitignore  .gitlab-ci.yml  3RD-PARTY-LICENSES.txt  Cargo.toml  LICENSE.txt  README.md  build.gradle  build.gradle.kts  config  html  meson.build  meson.options  pom.xml  settings.gradle  settings.gradle.kts  update-verification-metadata
codec/src/test/cplusplus/: base32.cpp  base64.cpp  meson.build  test.cpp
compat/src/: meson.build
compat/src/main/cplusplus/: boost-print.h  byte.h  fdatasync.h  getentropy.h  getuid.h  magic.h  meson.build  mkdirs.h  mode.h  uname.h  xdgdirectories.h
compat/src/main/rust/: assert.rs  errno.rs  getentropy.rs  getuid.rs  lib.rs  magic.rs  mode.rs  ntstatus.rs  statvfs.rs  ulimit.rs  uname.rs  xdgdirectories.rs
compat/src/test/cplusplus/: byte.cpp  getuid.cpp  meson.build  test.cpp
crypto/: Cargo.toml  meson.build  pom.xml
crypto/src/: meson.build  meson_options.txt
crypto/src/benchmark/cplusplus/: ajtaicommitment.cpp  blacklemon.cpp  cyclotomicring.cpp  ellipticcurve.cpp  extensionfield.cpp  integerring.cpp  johnsonlindenstrauss.cpp  latticefold.cpp  meson.build  pastacurves.cpp  pedersencommitment.cpp  poseidon2.cpp  primefield.cpp  sumfold.cpp
crypto/src/benchmark/rust/: blake2b.rs  field25519.rs  johnsonlindenstrauss.rs  lpr.rs  poseidon2.rs  sumcheck.rs
crypto/src/main/cplusplus/: Makefile  abeliangroup.h  ajtaicommitment.h  ajtaicommitmentbenchmark.cpp  ajtaicommitmenttest.cpp  benchmark.cpp  bfv.h  bfvtest.cpp  bigint.h  biginttest.cpp  binaryuniformdistribution.h  bitint.h  blacklemon.h  blacklemontest.cpp  blake2.h  byte.h  ccsbuilder.h  chacha.h  chacha20.h  circuitbuilder.h  convolution.h  customizableconstraintsystem.h  customizableconstraintsystemtest.cpp  cyclotomicring.h  cyclotomicringbenchmark.cpp  dilithium.h  dilithiumring.h  dilithiumtest.cpp  discretegaussiandistribution.h  edwards25519.h  eqextension.h  eqextensiontest.cpp  extensionfieldbenchmark.cpp  fastrng.h  fermat.h  fermattest.cpp  field25519.h  fs.h  hypercube.h  hypercubetest.cpp  (+94 more)
crypto/src/main/java/: module-info.java
crypto/src/main/rust/: abeliangroup.rs  ajtaicommitment.rs  algebra.rs  bigint.rs  binaritypolynomial.rs  binaryuniformdistribution.rs  blacklemon.rs  chacha.rs  circuitbuilder.rs  commitmentscheme.rs  compressionfunction.rs  constraintsystem.rs  convolution.rs  customizableconstraintsystem.rs  cyclicgroup.rs  densematrix.rs  densevector.rs  distribution.rs  duplex.rs  edwards25519.rs  eqextension.rs  fastdrg.rs  fastrng.rs  fermat.rs  field.rs  field25519.rs  float.rs  float01distribution.rs  freemodule.rs  gcd.rs  gf2.rs  group.rs  hypercube.rs  integer.rs  interpolation.rs  jive.rs  johnsonlindenstrauss.rs  latticegadget.rs  lib.rs  lm.rs  (+39 more)
crypto/src/test/cplusplus/: ajtaicommitment.cpp  bfv.cpp  bigint.cpp  binaryuniformdistribution.cpp  blacklemon.cpp  blake2b.cpp  byte.cpp  ccsbuilder.cpp  chacha20.cpp  circuitbuilder.cpp  circuitry.h  customizableconstraintsystem.cpp  dilithium.cpp  edwards25519.cpp  eqextension.cpp  fastrng.cpp  fermat.cpp  field25519.cpp  fs.cpp  hypercube.cpp  interpolation.cpp  jive.cpp  johnsonlindenstrauss.cpp  latticefold.cpp  latticegadget.cpp  lm62.cpp  logicgate.cpp  matrix.cpp  matrixdense.cpp  matrixring.cpp  matrixsparse.cpp  merkletree.cpp  meson.build  module.cpp  multilinearextension.cpp  numbertheoretictransform.cpp  pastacurves.cpp  pedersencommitment.cpp  pervushin.cpp  polynomialring.cpp  (+18 more)
crypto/src/test/rust/: ajtaicommitment.rs  arithmeticgate.rs  bigint.rs  binaritypolynomial.rs  binaryuniformdistribution.rs  blacklemon.rs  blake2b.rs  branchless.rs  chacha20.rs  circuitbuilder.rs  convolution.rs  customizableconstraintsystem.rs  densematrix.rs  densevector.rs  duplex.rs  edwards25519.rs  eqextension.rs  fastdrg.rs  fermat.rs  field25519.rs  freemodule.rs  gf2.rs  hammingweight.rs  hypercube.rs  identitymatrix.rs  interpolation.rs  jive.rs  johnsonlindenstrauss.rs  latticegadget.rs  lm.rs  logicgate.rs  lpr.rs  maskingpolynomial.rs  matrixdense.rs  matrixring.rs  matrixsparse.rs  merkletree.rs  module.rs  multilinearextension.rs  pervushin.rs  (+19 more)
daemon/: Cargo.toml  build.gradle.kts  pom.xml
daemon/src/main/cplusplus/: daemon.cpp  meson.build
daemon/src/main/rust/: daemon.rs
desktop/src/main/cplusplus/: desktop.cpp  historymodel.h  mainwindow.h  meson.build  preferencesdialog.h  settings.h  trayicon.h
io/src/test/cplusplus/: hash_output_stream.cpp  meson.build  size_output_stream.cpp  span_input_stream.cpp  span_output_stream.cpp  test.cpp
kernel/: Cargo.toml  build.gradle.kts  pom.xml
kernel/src/benchmark/rust/: ed25519.rs
kernel/src/main/resources/: genesis.json  peers.txt  regtest.json
kernel/src/main/rust/: account.rs  amount.rs  blake2b.rs  block.rs  ed25519.rs  error.rs  hashlock.rs  htlc.rs  lib.rs  multisig.rs  proofofstake.rs  timelock.rs  transaction.rs
kernel/src/test/rust/: amount.rs  block.rs  ed25519.rs  hashlock.rs  timelock.rs  transaction.rs
log/src/main/cplusplus/: logger.h  logmanager.h  meson.build
network/: Cargo.toml
network/src/main/cplusplus/: background.h  concurrent_vector.h  connection.h  endpoint.h  i2psam.h  meson.build  networksettings.h  node.h  peertable.h  router.h  threadpool.h  torcontroller.h
network/src/main/rust/: blockdb.rs  blockfetcher.rs  coindb.rs  connection.rs  dbview.rs  endpoint.rs  fjall.rs  genesis.rs  i2psam.rs  lib.rs  natpmp.rs  node.rs  peertable.rs  rollinghashset.rs  router.rs  settings.rs  socks5.rs  staker.rs  torcontroller.rs  txfetcher.rs  txpool.rs  undoblock.rs
network/src/test/cplusplus/: concurrent_vector.cpp  endpoint.cpp  i2psam.cpp  meson.build  test.cpp
network/src/test/rust/: blockannounce.rs  endpoint.rs  hello.rs  i2psam.rs  rollinghashset.rs
time/src/test/cplusplus/: meson.build  milliseconds.cpp  systemclock.cpp  test.cpp
vm/src/test/cplusplus/: cell.cpp  meson.build  test.cpp
wallet/: Cargo.toml
wallet/src/main/cplusplus/: meson.build  sqlite.h  wallet.h
wallet/src/main/rust/: address.rs  lib.rs  wallet.rs  walletdb.rs
wallet/src/test/cplusplus/: meson.build  sqlite.cpp  (+2 more)
(+1205 files in other folders)
