#
# Copyright (c) 2025 Pavel Vasin
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.
#

[workspace]
resolver = "3"
members = [
    "compat",
    "crypto",
    "daemon",
    "network",
    "serialization",
]

[workspace.dependencies]
blacknet-compat = { path = "compat" }
blacknet-crypto = { path = "crypto" }
blacknet-network = { path = "network" }
blacknet-serialization = { path = "serialization" }
data-encoding = { version = "2.9.0" }
data-encoding-macro = { version = "0.1.18" }
libc = { version = "0.2.174" }
platform-info = { version = "2.0.5" }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = { version = "0.10.9" }
sha3 = { version = "0.10.8" }
tokio = { version = "1.46.1", features = ["net", "rt-multi-thread"] }
windows-sys = { version = "0.60.2", features = ["Win32_Security_Authentication_Identity"] }

[workspace.package]
version = "0.3.0"
authors = ["Blacknet Team"]
edition = "2024"
description = "Decentralized peer-to-peer network that secures a public zero-knowledge platform with the proof of stake consensus"
documentation = "https://blacknet.ninja/documentation.html"
readme = "README.md"
homepage = "https://blacknet.ninja"
repository = "https://gitlab.com:blacknet-ninja/blacknet"
license = "LGPL-3.0-or-later"
keywords = ["blacknet", "decentralized", "zero-knowledge", "finance", "p2p"]
categories = ["cryptography::cryptocurrencies"]
