#
# Copyright (c) 2025 Pavel Vasin
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.
#

[workspace]
resolver = "3"
members = [
    "compat",
    "crypto",
    "daemon",
    "io",
    "log",
    "network",
    "serialization",
    "time",
    "vm",
]

[workspace.dependencies]
blacknet-compat = { path = "compat" }
blacknet-crypto = { path = "crypto" }
blacknet-io = { path = "io" }
blacknet-log = { path = "log" }
blacknet-network = { path = "network" }
blacknet-serialization = { path = "serialization" }
blacknet-time = { path = "time" }
blacknet-vm = { path = "vm" }
criterion = { version = "0.7.0", default-features = false, features = ["cargo_bench_support"] }
data-encoding = { version = "2.9.0" }
data-encoding-macro = { version = "0.1.18" }
libc = { version = "0.2.176" }
natpmp = { version = "0.5.0" }
orx-tree = { version = "1.8.0", default-features = false }
platform-info = { version = "2.0.5" }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
sha2 = { version = "0.10.9" }
sha3 = { version = "0.10.8" }
spdlog-rs = { version = "0.4.3" }
thiserror = { version = "2.0.16", default-features = false }
tokio = { version = "1.47.1", features = ["io-util", "net", "rt-multi-thread", "sync", "time"] }
windows-sys = { version = "0.61.1", features = ["Win32_Security_Authentication_Identity"] }

[workspace.package]
version = "0.3.0"
authors = ["Blacknet Team"]
edition = "2024"
description = "Decentralized peer-to-peer network that secures a public zero-knowledge platform with the proof of stake consensus"
documentation = "https://blacknet.ninja/documentation.html"
readme = "README.md"
homepage = "https://blacknet.ninja"
repository = "https://gitlab.com:blacknet-ninja/blacknet"
license = "LGPL-3.0-or-later"
keywords = ["blacknet", "decentralized", "zero-knowledge", "finance", "p2p"]
categories = ["cryptography::cryptocurrencies"]
