#
# Copyright (c) 2025 Pavel Vasin
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.
#

[workspace]
resolver = "3"
members = [
    "compat",
    "crypto",
    "daemon",
    "io",
    "json-rpc",
    "kernel",
    "log",
    "network",
    "serialization",
    "time",
    "vm",
    "wallet",
]

[workspace.dependencies]
blacknet-compat = { path = "compat" }
blacknet-crypto = { path = "crypto" }
blacknet-io = { path = "io", default-features = false }
blacknet-json-rpc = { path = "json-rpc" }
blacknet-kernel = { path = "kernel" }
blacknet-log = { path = "log" }
blacknet-network = { path = "network" }
blacknet-serialization = { path = "serialization" }
blacknet-time = { path = "time" }
blacknet-vm = { path = "vm" }
blacknet-wallet = { path = "wallet" }
atomic = { version = "0.6.1", default-features = false }
axum = { version = "0.8.8", default-features = false, features = ["form", "http1", "json", "tokio", "ws"] }
bech32 = { version = "0.11.1", default-features = false, features = ["alloc"] }
blake2 = { version = "0.10.6", default-features = false }
bytemuck = { version = "1.24.0", features = ["derive"] }
chrono = { version = "0.4.42", default-features = false }
criterion = { version = "0.8.1", default-features = false, features = ["cargo_bench_support"] }
data-encoding = { version = "2.9.0", default-features = false, features = ["alloc"] }
data-encoding-macro = { version = "0.1.18" }
digest = { version = "0.10.7", default-features = false }
fjall = { version = "2.11.2", default-features = false }
hashlink = { version = "0.11.0" }
libc = { version = "0.2.178" }
log = { version = "0.4.29" }
natpmp = { version = "0.5.0" }
num-bigint = { version = "0.4.6", default-features = false }
orx-tree = { version = "2.1.0", default-features = false }
platform-info = { version = "2.0.5" }
ripemd = { version = "0.1.3", default-features = false }
rusqlite = { version = "0.38.0" }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_core = { version = "1.0.228", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.145" }
sha2 = { version = "0.10.9", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
spdlog-rs = { version = "0.5.2" }
thiserror = { version = "2.0.17", default-features = false }
tokio = { version = "1.48.0", features = ["io-util", "net", "rt-multi-thread", "signal", "sync", "time"] }
windows-sys = { version = "0.61.2", features = ["Win32_Security_Authentication_Identity"] }

[workspace.lints.clippy]
len_without_is_empty = "allow"
module_inception = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
missing_const_for_fn = "warn"
needless_pass_by_value = "warn"

[workspace.package]
version = "0.3.0"
authors = ["Blacknet Team"]
edition = "2024"
rust-version = "1.91.0"
description = "Decentralized peer-to-peer network that secures a public zero-knowledge platform with the proof of stake consensus"
documentation = "https://blacknet.ninja/documentation.html"
readme = "README.md"
homepage = "https://blacknet.ninja"
repository = "https://gitlab.com:blacknet-ninja/blacknet"
license = "LGPL-3.0-or-later"
keywords = ["blacknet", "decentralized", "zero-knowledge", "finance", "p2p"]
categories = ["cryptography::cryptocurrencies"]
