#
# Copyright (c) 2025 Pavel Vasin
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.
#

option('tests', type: 'boolean', value: false, description: 'Unit testing')
option('tests_report_junit', type: 'boolean', value: false, description: 'Write results of unit testing in JUnit format')
option('benchmarks', type: 'boolean', value: false, description: 'Microbenchmarking')
option('network', type: 'feature', value: 'auto', description: 'Peer-to-peer network')
option('daemon', type: 'feature', value: 'auto', description: 'Daemon (server)')
option('desktop', type: 'feature', value: 'auto', description: 'Desktop GUI')
