#
# Copyright (c) 2025 Pavel Vasin
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.
#

[package]
name = "blacknet-crypto"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
orx-tree.workspace = true

[lib]
doctest = false
path = "src/main/rust/lib.rs"

[[test]]
name = "bigint"
path = "src/test/rust/bigint.rs"

[[test]]
name = "circuitbuilder"
path = "src/test/rust/circuitbuilder.rs"

[[test]]
name = "customizableconstraintsystem"
path = "src/test/rust/customizableconstraintsystem.rs"

[[test]]
name = "duplex"
path = "src/test/rust/duplex.rs"

[[test]]
name = "eqextension"
path = "src/test/rust/eqextension.rs"

[[test]]
name = "fermat"
path = "src/test/rust/fermat.rs"

[[test]]
name = "field25519"
path = "src/test/rust/field25519.rs"

[[test]]
name = "hypercube"
path = "src/test/rust/hypercube.rs"

[[test]]
name = "interpolation"
path = "src/test/rust/interpolation.rs"

[[test]]
name = "latticegadget"
path = "src/test/rust/latticegadget.rs"

[[test]]
name = "matrixdense"
path = "src/test/rust/matrixdense.rs"

[[test]]
name = "matrixring"
path = "src/test/rust/matrixring.rs"

[[test]]
name = "matrixsparse"
path = "src/test/rust/matrixsparse.rs"

[[test]]
name = "module"
path = "src/test/rust/module.rs"

[[test]]
name = "multilinearextension"
path = "src/test/rust/multilinearextension.rs"

[[test]]
name = "pervushin"
path = "src/test/rust/pervushin.rs"

[[test]]
name = "r1cs"
path = "src/test/rust/r1cs.rs"

[[test]]
name = "univariatepolynomial"
path = "src/test/rust/univariatepolynomial.rs"

[[test]]
name = "vectordense"
path = "src/test/rust/vectordense.rs"

[[test]]
name = "vectorsparse"
path = "src/test/rust/vectorsparse.rs"

[[test]]
name = "z2"
path = "src/test/rust/z2.rs"
