#
# Copyright (c) 2025-2026 Pavel Vasin
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.
#

[package]
name = "blacknet-kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
blacknet-crypto.workspace = true
blacknet-serialization.workspace = true
blacknet-time.workspace = true
blake2.workspace = true
bytemuck.workspace = true
data-encoding.workspace = true
ripemd.workspace = true
serde.workspace = true
sha2.workspace = true
sha3.workspace = true
zeroize.workspace = true

[dev-dependencies]
criterion.workspace = true

[lints]
workspace = true

[lib]
doctest = false
path = "src/main/rust/lib.rs"

[[test]]
name = "amount"
path = "src/test/rust/amount.rs"

[[test]]
name = "block"
path = "src/test/rust/block.rs"

[[test]]
name = "ed25519"
path = "src/test/rust/ed25519.rs"

[[test]]
name = "hashlock"
path = "src/test/rust/hashlock.rs"

[[test]]
name = "timelock"
path = "src/test/rust/timelock.rs"

[[test]]
name = "transaction"
path = "src/test/rust/transaction.rs"

[[bench]]
name = "ed25519"
path = "src/benchmark/rust/ed25519.rs"
harness = false
